--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
     <div class="header">
         <h1>Weather App</h1>
-        <p>Made By Kartik Chouhan</p>
     </div>
-    <div class="container">
+    <div>
         <div class="serach">
             <input type="text" id="search-in" placeholder="Enter city name" autocomplete="off" oninput="showSuggestions(this.value)">
             <div id="suggestions"></div>
@@ -21,6 +20,8 @@
                 <i class='bx bx-search'></i>
             </button>
         </div>
+    </div>
+    <div class="container">    
         <div class="data-container" id="dataID">
             <div class="city-date">
                 <h1 id="city-name">City Name</h1>
@@ -49,6 +50,8 @@
             </div>
         </div>
     </div>
+    <footer>&copy; Kartik Chouhan || All Rights Reserved</footer>
 <script src="script.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
